fixed member page gap issue

--- a/public/scss/_performer.scss
+++ b/public/scss/_performer.scss
@@ -37,7 +37,7 @@
             span{
                 color: #FF4533;
                 font-weight: 400;
-                font-size: 20px;
+                font-size: 18px;
             }
         }
     }
