--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -1981,7 +1981,7 @@ h3 {
 .performar_area .single_performer .performer_heading span {
   color: #FF4533;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .brand_area {
